CHANGELOG
---------
v1.4.0
- Turn auto-register off for players who !unregister

v1.3.6
- Added the !auto chest command
- Added the possibilty of finding chests after auto attacking/healing
- Fixed some messages

v1.3.5
- Fixed a crash error in !challenge command

v1.3.4
- Fixed a bug in HP not reaching 0 when player has superior armor

v1.3.3
- Fixed a bug in armor upgrade

v1.3.2
- Increased the lifespan of upgraded swords/armors from 40 to 100
- Increased the maximum forge capacity from 3 to 4

v1.3.1
- Fixed an issue with chest not disappering after it opens up on a bomb

v1.3.0
- Do not allow players to have more than 1 unit of each rare item
- Added 4 more items: Revealic, Thievic, Summonic and Maintainic
- Imposed restrictions on the use of item Switchic (it now needs and consumes full MP)
- Made rare items appear half as much as non-rare items
- Added chests and forges to the game (containing ore of metals and jewels)
- Added swords and armors, which affect the damage calculation in battles
- Disabled direct hilighting of nicknames by the bot
- Fixed issue #7 (stats not saving properly when round ends)

v1.2.1
- Added "!auto search" command
- Added 2 more items: Switchic and Drainic

v1.2.0
- Added new user commands for items: !search, !use, !inventory, !drop
- Added ability to fight enemy leaders using: !challenge
- Reward the attacker 5 additional score points if he/she finishes off an enemy
- Allow running !status without arguments to show the status of the issuing player

v1.1.1
- Fixed minor issues in v1.1.0

v1.1.0
- Added the leader characters: Dracula and Zombilo (they give their soldiers substantial boost when they appear)
- Added !auto commands that let the user change its settings to auto register/attack/heal
- Display the round length in time when the round ends
- Added !version command
- Fixed other issues

v1.0.2
- Enabled the round to end when all remaining players of one type unregister

v1.0.1