@@ -2,6 +2,7 @@ CHANGELOG
 ---------
 v1.4.0
 - Turn auto-register off for players who !unregister
+- Allow chests to appear after !challenge command
 
 v1.3.6
 - Added the !auto chest command
